# plateparser

./: .gitignore  LICENSE  README.md  Untitled.ipynb  analysis.ipynb  plateParser.py  pyproject.toml
examples/: 1536_well_simple.xlsx  384_well_simple.xlsx  Example_data.xlsx  tecan_spark_example.xlsx
notebooks/: analysis.ipynb  plateFormat.ipynb  tidyFormat.ipynb
src/plateParser/: __init__.py  parser.py
src/plateparser/: parser.py
src/tempFolder/: __init__.py
